<resources>
    <string name="app_name">Money Lover</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_account_and_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_account">Account</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Language</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="money_lover">Money Lover</string>
    <string-array name="languages_array">
        <item>English</item>
        <item>Vietnamese</item>
        <item>Chinese</item>
        <item>Russia</item>
        <item>French</item>
    </string-array>

    <string-array name="languages_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="currency_array">
        <item>USD ($)</item>
        <item>VND (₫)</item>
        <item>Pound (£)</item>
        <item>Baht (฿)</item>
    </string-array>

    <string-array name="type_array">
        <item>Daily</item>
        <item>Monthly</item>
        <item>Yearly</item>
        <item>By season</item>
    </string-array>

    <string-array name="currency_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="title_activity_register">Sign up</string>
    <string name="tv_login"><u>Login</u></string>
    <string name="tv_register"><u>Register</u></string>
    <string name="tv_forgot_password"><u>Forgot password?</u></string>
    <string name="facebook_app_id">1810002905789714</string>
    <string name="fb_login_protocol_scheme">fb1810002905789714</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_test">Test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_activity_tab">Transactions</string>
    <string name="tab_text_1">Last year</string>
    <string name="tab_text_2">Last month</string>
    <string name="tab_text_3">This month</string>
    <string name="tab_text_4">Next month</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_transaction_create">Add Transaction</string>
    <string name="title_activity_transaction_edit">Edit Transaction</string>
    <string name="title_change_password">Change Password</string>
</resources>
